--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "outDir": "dist",
+    "target": "ES6",
+    "lib": ["dom", "dom.iterable", "esnext", "ES6"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
